--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
     <script src="https://kit.fontawesome.com/607e4879ac.js" crossorigin="uguralpyildiz"></script>
-    <meta name="title" content="Ugur Alp Yıldız - Frontend Developer">
+    <meta name="title" content="Huseyin Oztuna - Game Developer">
     <meta
-        content="Merhaba, benim adım Uğur Alp Yıldız. Harika tasarım ve kullanıcı deneyimlerine önem veren freelancer frontend geliştiricisiyim."
+        content="Merhaba, benim adım Hüseyin Öztuna. Harika tasarım ve kullanıcı deneyimlerine önem veren freelancer frontend geliştiricisiyim."
         name="description">
     <meta name="keywords"
-        content="ugur,uğuralpyıldız,uguralpyildiz,ugue alp yildiz,uğue alp,uğur yıldız,yildiz,ugur alp yildiz,ugur alp,uğur alp, uğur alp yıldız,uğur yıldız,frontend developer,freelancer,front-end,developer">
+        content="KEYWORDS">
     <meta name="robots" content="index, follow">
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <meta property="og:title" content="Ugur Alp Yıldız - Frontend Developer">
+    <meta property="og:title" content="Huseyin Oztuna - Game Developer">
     <meta property="og:description"
-        content="Merhaba, benim adım Uğur Alp Yıldız. Harika tasarım ve kullanıcı deneyimlerine önem veren freelancer frontend geliştiricisiyim.">
+        content="açıklama">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Uğur Alp Yıldız - Frontend Developer</title>
+    <title>Hüseyin Öztuna - Game Developer</title>
     
 </head>
 
@@ -53,13 +53,13 @@
                     <div class="name-align">
                         <div class="link-anim-set">
                             <div class="link-anim-set-p">
-                                <div class="name-bar ">Uğur Alp Yıldız</div>
+                                <div class="name-bar ">Hüseyin Öztuna</div>
                             </div>
                         </div>
                         <div class="link-anim-set">
                             <div class="link-anim-set-p">
                                 <div class="typewriting">
-                                    <div class="job-bar">Frontend Developer</div>
+                                    <div class="job-bar">Game Developer</div>
                                 </div>
                             </div>
                         </div>
@@ -75,7 +75,7 @@
                                 <div class="profile-img marg">
                                     <img width="" height="" id="profile-logo" src="img/logo.png" alt="logo">
                                 </div>
-                                <div class="name-bar">Uğur Alp Yıldız<br><span>Frontend Developer</span></div>
+                                <div class="name-bar">Hüseyin Öztuna<br><span>Game Developer</span></div>
                             </div>
                             <div class="responsive-settings-mobile-animation">
                                 <div id="nth" class="nav-links-effect-container">
@@ -176,9 +176,9 @@
                     <div class="home-name">
                         <div class="link-anim-set">
                             <div class="link-anim-set-p">
-                                <h1 class="animated-text"><span>U</span><span>Ğ</span><span>U</span><span>R</span>
-                                    <span>A</span><span>L</span><span>P</span>
-                                    <span>Y</span><span>I</span><span>L</span><span>D</span><span>I</span><span>Z</span>
+                                <h1 class="animated-text"><span>H</span><span>Ü</span><span>S</span><span>E</span><span>N</span><span>İ</span><span>N</span>
+                                    <span>Ö</span><span>Z</span><span>T</span><span>U</span><span>N</span><span>A</span>
+                                   
                                 </h1>
                             </div>
                         </div>
@@ -1218,7 +1218,7 @@
 
                 </div>
                 <div class="copyright">
-                    2024 © Uğur Alp Yıldız
+                    2024 © Hüseyin Öztuna
                 </div>
 
             </div>
