--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <div class="home-name">
                         <div class="link-anim-set">
                             <div class="link-anim-set-p">
-                                <h1 class="animated-text"><span>H</span><span>Ü</span><span>S</span><span>E</span><span>N</span><span>İ</span><span>N</span>
+                                <h1 class="animated-text"><span>H</span><span>Ü</span><span>S</span><span>E</span><span>Y</span><span>İ</span><span>N</span>
                                     <span>Ö</span><span>Z</span><span>T</span><span>U</span><span>N</span><span>A</span>
                                    
                                 </h1>
