--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         href="https://fonts.googleapis.com/css2?family=Cabin+Condensed&family=Edu+SA+Beginner:wght@600&family=Inconsolata&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
-    <script src="https://kit.fontawesome.com/607e4879ac.js" crossorigin="uguralpyildiz"></script>
+    <script src="https://kit.fontawesome.com/607e4879ac.js" crossorigin="huseyinoztuna"></script>
     <meta name="title" content="Huseyin Oztuna - Game Developer">
     <meta
-        content="Merhaba, benim adım Hüseyin Öztuna. Harika tasarım ve kullanıcı deneyimlerine önem veren freelancer frontend geliştiricisiyim."
+        content="-"
         name="description">
     <meta name="keywords"
         content="KEYWORDS">
@@ -185,10 +185,8 @@
                         <div class="link-anim-set ">
                             <div class="link-anim-set-p">
                                 <h3 class="animated-text-d">
-                                    <span>U</span><span>I</span><span>-</span><span>U</span><span>X</span>
-                                    <span>&</span>
-                                    <span>F</span><span>r</span><span>o</span><span>n</span><span>t</span><span>-</span><span>e</span><span>n</span><span>d</span>
-                                    <span>D</span><span>e</span><span>v</span><span>e</span><span>l</span><span>o</span><span>p</span><span>e</span><span>r</span>
+                                    <span>G</span><span>A</span><span>M</span><span>E</span>
+                                    <span>D</span><span>;E</span><span>V</span><span>E</span><span>L</span><span>O</span><span>P</span><span>E</span><span>R</span>
                                 </h3>
                             </div>
                         </div>
@@ -199,7 +197,7 @@
                     <div class="home-p link-anim-fade">
 
                         <p>
-                            Harika tasarım ve müşteri memnuniyetine önem veren freelancer web sitesi geliştiricisiyim.
+                            -
                         </p>
 
                     </div>
