--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="https://kit.fontawesome.com/607e4879ac.js" crossorigin="huseyinoztuna"></script>
     <meta name="title" content="Huseyin Oztuna - Game Developer">
     <meta
-        content="-"
+        content="A"
         name="description">
     <meta name="keywords"
         content="KEYWORDS">
@@ -197,7 +197,7 @@
                     <div class="home-p link-anim-fade">
 
                         <p>
-                            -
+                            a
                         </p>
 
                     </div>
