--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="https://kit.fontawesome.com/607e4879ac.js" crossorigin="huseyinoztuna"></script>
     <meta name="title" content="Huseyin Oztuna - Game Developer">
     <meta
-        content="A"
+        content="-"
         name="description">
     <meta name="keywords"
         content="KEYWORDS">
@@ -197,7 +197,7 @@
                     <div class="home-p link-anim-fade">
 
                         <p>
-                            a
+                            -
                         </p>
 
                     </div>
@@ -425,34 +425,15 @@
                                         <div style="color:#bfc0c4;" class="about-text">
 
                                         </div>
-                                        Sıradan, özensiz ve düşük kaliteli bir web sitesi istiyorsanız, benimle
-                                        çalışmamalısınız. Eğer sırf var olsun diye
-                                        yapılmış, kullanıcıları kaçıran ve hiçbir teknik detayı düşünülmeden
-                                        oluşturulmuş bir siteyi tercih ediyorsanız,
-                                        başkalarıyla çalışmanız daha uygun olacaktır.
+-
                                         <br><br>
-                                        Ben, projelere titizlikle yaklaşır ve her detayın kusursuz olmasını
-                                        sağlamak için çaba gösteririm. Ancak "yeterince iyi" bir çözüm arıyorsanız,
-                                        benim standartlarım size fazla
-                                        gelecektir.
+-
                                         <br><br>
-                                        Sıkıcı, yavaş ve kullanıcı dostu olmayan bir site istiyorsanız, benim
-                                        yeteneklerim gereksiz olacaktır. Çünkü ben,
-                                        React.js ve Tailwind CSS gibi modern teknolojileri kullanarak yalnızca hızlı ve
-                                        profesyonel siteler oluştururum. Sizin
-                                        ihtiyacınız sıradan bir web sitesi ise, benim size sağlayacağım hizmetler
-                                        gereğinden fazla olacaktır.
+-
                                         <br><br>
-                                        2022'den beri ajanslar ve firmalar için freelancer olarak çalışıyorum ve sürekli
-                                        güncel teknolojileri takip ediyorum.
-                                        Bu, size fazlasıyla inovatif ve ilerici gelebilir. Eğer eski teknolojilere bağlı
-                                        kalmak, çağa ayak uydurmayan çözümlerle
-                                        yetinmek istiyorsanız, bu kadar ileri seviyede bir bilgi ve tecrübeye
-                                        ihtiyacınız olmayabilir.
+-
                                         <br><br>
-                                        Kısacası, vasat bir site istiyorsanız, ben size gereksiz yere yüksek kaliteli
-                                        bir hizmet sunmuş olurum. Baştan uyarayım,
-                                        benimle çalışmak isterseniz sıradanın ötesine geçmeye hazır olmalısınız!
+-
 
                                         <br><br>
 
