--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                             <div class="link-anim-set-p">
                                 <h3 class="animated-text-d">
                                     <span>G</span><span>A</span><span>M</span><span>E</span>
-                                    <span>D</span><span>;E</span><span>V</span><span>E</span><span>L</span><span>O</span><span>P</span><span>E</span><span>R</span>
+                                    <span>D</span><span>E</span><span>V</span><span>E</span><span>L</span><span>O</span><span>P</span><span>E</span><span>R</span>
                                 </h3>
                             </div>
                         </div>
