--- a/index.html
+++ b/index.html
@@ -410,35 +410,31 @@
                     <div class="container">
                         <div class="section-box-container">
                             <div class="experince-header"><span class="experince-header-set">
-                                    <span>Neden benimle</span> <span
-                                        style="padding: 5px; text-decoration: underline; text-decoration-color: #d34848;">çalışmamalısınız?</span>
-                                </span></div>
+                                    <span>Hakkımda</span>
+                                </div>
                             <div class="about-container">
                                 <div class="about-me-section">
 
                                     <div class="about-text">
 
-                                        <!-- Manipülatif Metin Başlangıcı -->
                                         <div style="color:#bfc0c4;" class="about-text">
                                             <p>
-                                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam id eligendi tenetur dicta libero harum.
+                                                Üç senedir profesyonel olmak üzere yedi senedir yazılım geliştiyorum. 
+                                                Geliştirdiğim otuzun üzerinde yayınlanmış oyunum bulunmakta. Oyun geliştirme süreçlerinizde size yardımcı olabilirim.
                                             </p>
                                         </div>
--
-                                        
-
                                     </div>
 
                                     <div style="color:#bfc0c4;" class="about-text">
                                         İlgi alanlarım
                                     </div>
                                     <div class="skills-bar-about flexstart intColor">
-                                        <i class="fa-brands fa-html5" title="HTML"></i>
-                                        <i class="fa-brands fa-css3-alt" title="CSS"></i>
-                                        <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
-                                        <i class="fa-brands fa-sass" title="Sass"></i>
-                                        <i class="fa-brands fa-js" title="JavaScript"></i>
-                                        <i class="fa-brands fa-react" title="React"></i>
+                                        <i class="fa-brands fa-unity" title="Unity Engine"></i>
+                                        <i class="fa-solid fa-cube" title="3D / Game Objects"></i>
+                                        <i class="fa-solid fa-gamepad" title="Gameplay Systems"></i>
+                                        <i class="fa-solid fa-code" title="C# Programming"></i>
+                                        <i class="fa-solid fa-diagram-project" title="Game Architecture"></i>
+                                        <i class="fa-solid fa-bolt" title="Optimization & Performance"></i>
                                     </div>
                                 </div>
                                 <div class="img-section">
