--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                                         <i class="fa-solid fa-gamepad" title="Gameplay Systems"></i>
                                         <i class="fa-solid fa-code" title="C# Programming"></i>
                                         <i class="fa-solid fa-diagram-project" title="Game Architecture"></i>
-                                        <i class="fa-solid fa-bolt" title="Optimization & Performance"></i>
+                                        <i class="fa-solid fa-code" title="C#"></i>
                                     </div>
                                 </div>
                                 <div class="img-section">
