--- a/index.html
+++ b/index.html
@@ -425,16 +425,13 @@
                                         </div>
                                     </div>
 
-                                    <div style="color:#bfc0c4;" class="about-text">
-                                        İlgi alanlarım
-                                    </div>
                                     <div class="skills-bar-about flexstart intColor">
                                         <i class="fa-brands fa-unity" title="Unity Engine"></i>
                                         <i class="fa-solid fa-cube" title="3D / Game Objects"></i>
                                         <i class="fa-solid fa-gamepad" title="Gameplay Systems"></i>
                                         <i class="fa-solid fa-code" title="C# Programming"></i>
                                         <i class="fa-solid fa-diagram-project" title="Game Architecture"></i>
-                                        <span class="icon-badge" title="C#">C#</span>
+                                        <i class="fa-solid fa-gauge-high" title="Performance Optimization"></i>
                                     </div>
                                 </div>
                                 <div class="img-section">
