--- a/index.html
+++ b/index.html
@@ -539,14 +539,14 @@
 
                 <div class="skills-bar-about">
 
-                    <a class="social-links" href="https://github.com/uguralpyildiz" target="_blank"><i
+                    <a class="social-links" href="https://github.com/HuseyinOztuna03" target="_blank"><i
                             class="margin fa-brands fa-github"></i></a>
-                    <a class="social-links" href="https://www.linkedin.com/in/uguralpyildiz" target="_blank"><i
+                    <a class="social-links" href="https://www.linkedin.com/in/huseyin-oztuna-8b5095238/" target="_blank"><i
                             class="fa-brands fa-linkedin-in"></i></a>
-                    <a class="social-links" href="https://www.instagram.com/uguryildiz_sw/" target="_blank"><i
+                    <a class="social-links" href="https://www.instagram.com/huseyin_oztuna/" target="_blank"><i
                             class="insta fa-brands fa-instagram"></i></a>
                     <a class="social-links"
-                        href="https://api.whatsapp.com/send/?phone=905392983507&text&type=phone_number&app_absent=0"
+                        href="https://api.whatsapp.com/send/?phone=905511133266&text&type=phone_number&app_absent=0"
                         target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
                 <div class="copyright">
