--- a/index.html
+++ b/index.html
@@ -467,9 +467,8 @@
 
                             <div class="contact-alt">
                                 Konu ne olursa olsun buradaki form aracılığıyla veya <a class="contact-aef"
-                                    href="mailto:contact@uguralpyildiz.com">contact@huseyinoztuna.com</a> adresinden
-                                doğrudan e-posta yoluyla
-                                benimle iletişime geçmekten çekinmeyin.
+                                    href="mailto:huseyinoztuna03@gmail.com">huseyinoztuna03@gmail.com</a> adresinden
+                                doğrudan e-posta yoluyla iletişime geçebilirsiniz.
                             </div>
                         </div>
                         <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
