--- a/index.html
+++ b/index.html
@@ -464,65 +464,14 @@
                     <div class="contact-form">
 
                         <div class="contact-form-flex-l">
-
                             <div class="contact-alt">
-                                Konu ne olursa olsun buradaki form aracılığıyla veya <a class="contact-aef"
+                                Konu ne olursa olsun <a class="contact-aef"
                                     href="mailto:huseyinoztuna03@gmail.com">huseyinoztuna03@gmail.com</a> adresinden
                                 doğrudan e-posta yoluyla iletişime geçebilirsiniz.
                             </div>
                         </div>
                         <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
                         <div class="contact-form-flex-r">
-                            <div class="form-container">
-                                <form class="form-contact" action="https://formspree.io/f/maykgrao" method="POST"
-                                    target="dummyframe" novalidate>
-                                    <div class="form-opt">
-                                        <label>Adınız nedir? <span>*</span></label>
-                                        <div class="area-container">
-                                            <input class="c-name" minlength="3" autocomplete="off" type="name"
-                                                name="name" required placeholder="Lütfen adınızı giriniz.">
-                                            <div class="area"></div>
-                                            <div class="errmessage-cont">
-                                                <div class="errmessage"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-opt">
-                                        <label>E-posta adresiniz nedir? <span>*</span></label>
-                                        <div class="area-container">
-                                            <input class="c-email" type="email" autocomplete="off" name="email" required
-                                                placeholder="Lütfen e-posta adresinizi giriniz.">
-                                            <div class="area"></div>
-                                            <div class="errmessage-cont">
-                                                <div class="errmessage"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-opt">
-                                        <label>Mesajınız nedir? <span>*</span></label>
-                                        <div class="area-container">
-                                            <textarea class="textarea" minlength="10" name="message" required name="1"
-                                                id="1" cols="30" rows="10"
-                                                placeholder="Lütfen konuyu anlatın veya numaranızı yazın anında size dönüş yaparım."></textarea>
-                                            <div class="area"></div>
-                                            <div class="errmessage-cont">
-                                                <div class="errmessage"></div>
-                                            </div>
-                                            <div class="errmessage-cont">
-                                            </div>
-
-                                        </div>
-                                    </div>
-
-                                    <div class="btn-container">
-                                        <div class="download-center w100 fade-r">
-                                            <button type="submit" href="#cv" id="submitC" class="download-cv w100"><span
-                                                    class="submit-text">Gönder</span></button>
-                                        </div>
-                                    </div>
-                                </form>
-
-                            </div>
                         </div>
                         <img src="img/bgc.png" alt="formback">
 
