--- a/index.html
+++ b/index.html
@@ -466,8 +466,7 @@
                         <div class="contact-form-flex-l">
                             <div class="contact-alt">
                                 Konu ne olursa olsun <a class="contact-aef"
-                                    href="mailto:huseyinoztuna03@gmail.com">huseyinoztuna03@gmail.com</a> adresinden
-                                doğrudan e-posta yoluyla iletişime geçebilirsiniz.
+                                    href="mailto:huseyinoztuna03@gmail.com">huseyinoztuna03@gmail.com</a> adresinden doğrudan e-posta yoluyla iletişime geçebilirsiniz.
                             </div>
                         </div>
                         <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
