--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                         target="_blank" id="downloadCv" class="download-cv">
                                         <span class="download-text"><img width="26" height="26"
                                                 src="https://img.icons8.com/color/48/whatsapp--v1.png"
-                                                alt="whatsapp--v1" />Hadi Başlayalım</span>
+                                                alt="whatsapp--v1" />Whatsapp</span>
                                     </a>
                                     <!-- <div class="flag dropws">
                                         <img width="24" height="24"
