--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                                 <div class="skill-bar-dot"></div>Turn-based & real-time game logic
                             </div>
                             <div class="skill-bar">
-                                <div class="skill-bar-dot"></div>Performance optimization
+                                <div class="skill-bar-dot"></div>Performance optimization (FPS / memory)
                             </div>
                         </div>
                     </div>
