--- a/index.html
+++ b/index.html
@@ -400,7 +400,6 @@
 
     <div class="beforeunloads">
         <!-- 01 page end -->
-
         <!-- 02 page end -->
         <section>
             <!-- 03 page start -->
@@ -409,9 +408,10 @@
                 <div class="experince-container-fluid">
                     <div class="container">
                         <div class="section-box-container">
-                            <div class="experince-header"><span class="experince-header-set">
+                            <div class="experince-header">
+                                <span class="experince-header-set">
                                     <span>Hakkımda</span>
-                                </div>
+                            </div>
                             <div class="about-container">
                                 <div class="about-me-section">
 
@@ -419,7 +419,7 @@
 
                                         <div style="color:#bfc0c4;" class="about-text">
                                             <p>
-                                                Üç senedir profesyonel olmak üzere yedi senedir yazılım geliştiyorum. 
+                                                Üç senedir profesyonel olmak üzere yedi senedir yazılım geliştiyorum.
                                                 Geliştirdiğim otuzun üzerinde yayınlanmış oyunum bulunmakta. Oyun geliştirme süreçlerinizde size yardımcı olabilirim.
                                             </p>
                                         </div>
@@ -448,9 +448,86 @@
 
         </section>
 
-  
-        <!-- 03 page end -->
 
+        <!-- 03 page end -->
+        <!-- 03 page start (REFERANSLAR) -->
+        <section>
+            <div id="page">
+                <div id="projects" class="pageControl"></div>
+
+                <div class="experince-container-fluid">
+                    <div class="container">
+                        <div class="section-box-container">
+
+                            <div class="experince-header">
+                                <span class="experince-header-set">
+                                    <span>Referanslar</span>
+                                </span>
+                            </div>
+
+                            <div class="references-grid">
+
+                                <!-- Bambu Games -->
+                                <div class="ref-card">
+                                    <div class="ref-head">
+                                        <div class="ref-logo-wrap">
+                                            <img class="ref-logo" src="img/bambugames.png" alt="Bambu Games logo">
+                                        </div>
+                                        <div class="ref-title">Bambu Games</div>
+                                    </div>
+
+                                    <div class="ref-body">
+                                        <p>
+                                            Bambu Gamesin ilk zamanlarından itibaren oyunların geliştirilmesi, testi, optimizasyonu,
+                                            planlanması gibi birçok alanda katkı sağladım. Aktif olarak oyun masasındaki en çok oynanan
+                                            Babylon, Volcano, Atlantis gibi oyunlar da dahil olmak üzere 40+ oyunda çalıştım.
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <!-- Freelance -->
+                                <div class="ref-card">
+                                    <div class="ref-head">
+                                        <div class="ref-logo-wrap">
+                                            <img class="ref-logo" src="img/bionluk.png" alt="Bionluk logo">
+                                        </div>
+                                        <div class="ref-title">Freelance</div>
+                                    </div>
+
+                                    <div class="ref-body">
+                                        <p>
+                                            Yaklaşık iki sene boyunca bionluk platformu üzerinden oyun geliştirme / karakter modelleme,
+                                            animasyon / admob, yayınlama / reklam kampanyası hizmetleri verdim.
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <!-- Metaggio -->
+                                <div class="ref-card">
+                                    <div class="ref-head">
+                                        <div class="ref-logo-wrap">
+                                            <img class="ref-logo" src="img/metaggio.png" alt="Metaggio logo">
+                                        </div>
+                                        <div class="ref-title">Metaggio</div>
+                                    </div>
+
+                                    <div class="ref-body">
+                                        <p>
+                                            Bir online nft galeri projesi üzerinde photon kullanarak galerideki kullanıcıların birbiriyle
+                                            etkileşimde bulunması, sesli sohbetle konuşması ve projenin optimizasyonu gibi görevlerde bulundum.
+                                            Ayrıca çeşitli projelerin prototip geliştirme ve planlama süreçlerine katkı sağladım.
+                                        </p>
+                                    </div>
+                                </div>
+
+                            </div><!-- /references-grid -->
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- 03 page end (REFERANSLAR) -->
         <!-- 04 page start -->
 
         <section>
@@ -466,7 +543,7 @@
                         <div class="contact-form-flex-l">
                             <div class="contact-alt">
                                 Konu ne olursa olsun <a class="contact-aef"
-                                    href="mailto:huseyinoztuna03@gmail.com">huseyinoztuna03@gmail.com</a> adresinden doğrudan e-posta yoluyla iletişime geçebilirsiniz.
+                                                        href="mailto:huseyinoztuna03@gmail.com">huseyinoztuna03@gmail.com</a> adresinden doğrudan e-posta yoluyla iletişime geçebilirsiniz.
                             </div>
                         </div>
                         <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
@@ -486,15 +563,18 @@
 
                 <div class="skills-bar-about">
 
-                    <a class="social-links" href="https://github.com/HuseyinOztuna03" target="_blank"><i
-                            class="margin fa-brands fa-github"></i></a>
-                    <a class="social-links" href="https://www.linkedin.com/in/huseyin-oztuna-8b5095238/" target="_blank"><i
-                            class="fa-brands fa-linkedin-in"></i></a>
-                    <a class="social-links" href="https://www.instagram.com/huseyin_oztuna/" target="_blank"><i
-                            class="insta fa-brands fa-instagram"></i></a>
+                    <a class="social-links" href="https://github.com/HuseyinOztuna03" target="_blank">
+                        <i class="margin fa-brands fa-github"></i>
+                    </a>
+                    <a class="social-links" href="https://www.linkedin.com/in/huseyin-oztuna-8b5095238/" target="_blank">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                    <a class="social-links" href="https://www.instagram.com/huseyin_oztuna/" target="_blank">
+                        <i class="insta fa-brands fa-instagram"></i>
+                    </a>
                     <a class="social-links"
-                        href="https://api.whatsapp.com/send/?phone=905511133266&text&type=phone_number&app_absent=0"
-                        target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                       href="https://api.whatsapp.com/send/?phone=905511133266&text&type=phone_number&app_absent=0"
+                       target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
                 <div class="copyright">
                     2025 © Hüseyin Öztuna
